syntax = "proto3";

option csharp_namespace = "GrpcLogger.Services";

import "enums.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";


package logger;

service Logger {
	rpc AddLog (AddLogRequest) returns (StatusMessage);
	rpc GetLogs (GetLogsRequest) returns (GetLogsResponse);
}

message AddLogRequest {
	string message = 1;
	LogLevel logLevel = 2;
}


message GetLogsRequest {
	LogLevel logLevel = 1;
	int32 skip = 2;
	int32 take = 3;
	google.protobuf.StringValue searchTerm = 4;
}

message GetLogsResponse {
	repeated Log logs = 1;
}

message Log {
	string message = 1;
	LogLevel logLevel = 2;
	google.protobuf.Timestamp timestamp = 3;
}

message StatusMessage {
	string message = 1;
	bool success = 2;
}